src/main/java/com/example/vm/controller/error/exception/EntityNotEnabled.java
package com.example.vm.controller.error.exception;

public class EntityNotEnabled extends RuntimeException{
    public EntityNotEnabled(String message) {
        super(message);
    }
}
